--- a/index.html
+++ b/index.html
@@ -732,10 +732,10 @@
 			</div>
 
 			<div class="source">$('#ruby').treefy('check', true);</div>
-			<div class="description-code">Check or uncheck the checkbox.</div>
+			<div class="comment">Check or uncheck the checkbox.</div>
 
 			<div class="source">$('#java').treefy('enable', false);</div>
-			<div class="description-code">Disable or enable the checkbox.</div>
+			<div class="comment">Disable or enable the checkbox.</div>
 		</div>
 
 		<div id="footer">
